// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ByronWallet create 1`] = `
Array [
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ6WrBifkRWytn1V4VQ9t2Ea9eQxfQP2TRPyJDLN5eAJt55QLy",
  "Ae2tdPwUPEZ5hh76MV9uRWiNJYFXYKR9UtMyQY89ct7Q5WugHYBi7rXGtiJ",
  "Ae2tdPwUPEZ2XtPVCpvD1qLctRbm7iiJA9F3y53to6xHCZfexgAPLsoJjDE",
  "Ae2tdPwUPEZ1imz9hf2SmRvpFWyLCp8UMpHUreKta7mj88DzauTp7xG3XZ2",
  "Ae2tdPwUPEZKt9scQjzAFEKyuC33g3ARj94kex1S1kfHB9LWLA8Yp5WXVow",
  "Ae2tdPwUPEZF3MvPbbmP6bBysYDC5tHcMrVajZP2wiJ9Zi5ywSeZjVwZ1FL",
  "Ae2tdPwUPEYztvVSupCi3pWGYs3NmPbNzgmUo8sRhG588cScRL7Y2WDLpN1",
  "Ae2tdPwUPEZ2jyTwKkSVvvUGoSeYr4w69NEbA2BdqDhsvhMYQWEBvKDg8Vv",
  "Ae2tdPwUPEZ7YsiGerhsSiA14ZKZwhxy4LHqomXmK1TAFiWLEdE9THEQYrX",
  "Ae2tdPwUPEZDZp9YNnXCy2KCUdpm3UnHniAa3Ezwuf9H9SYdkXoLgS5LNWT",
  "Ae2tdPwUPEZ2cmvpsXk2hEBJDUhPvWmq1fuT3GDGJuJuX5mnwnBo5RTHQDs",
  "Ae2tdPwUPEZKf9FhZ4iDe2TceEvq9cRZRSV8kjQSb99m4c2hEsRbTuDhBDC",
  "Ae2tdPwUPEZ5ivCg8JwncgNmBokPjmwNKgNjQfbvB98LHqZFQUE3DqMEmmf",
  "Ae2tdPwUPEZ9unWaUPwie7PfeCxLRBDkeorrNrJXVyNXaGCZocXLyswvH8U",
  "Ae2tdPwUPEZLhL4ghH1TLhYCQK78S8axqpRsmwdG9TD3V8ZUaT6rBN8vqgt",
  "Ae2tdPwUPEZK8bwdVFKCfTUDkJGhj6z19XP3KAs2cJYucEPh4sCPYfZ915Z",
  "Ae2tdPwUPEZ4iRigLuwpnjYk7YgzdYErgCvyZjLRtZeeXpgkXtvXFRxQcZ9",
  "Ae2tdPwUPEZM4qGxS7F6kXJj6omjdnAdHgLmqLhqBDULnXpZwYWqKU3QYoh",
  "Ae2tdPwUPEZ9KjM56fEN8epENDFpD21uvvcVHurNaEEMWrgoqdR28Gi4UnG",
  "Ae2tdPwUPEZBBKA2uV1PisZm5aQv8T9UWi8g4rE7Tk79WN4ouctGfWvES2L",
  "Ae2tdPwUPEZEpvpeEeyyMTrQmyGPpvyE1NRyeyZd4qgjTbMdVFhYgtCRcJu",
  "Ae2tdPwUPEZ7quRFeKxaR3iM9G3ZwMgZYR2FqQKXohG8kzpuFpjs6e4CdPk",
  "Ae2tdPwUPEZ4bPbCUHrK2k3crAepLioTrEVNAuAs5vHig9JH5wezgt8MSPG",
  "Ae2tdPwUPEZKhL2Z5BfXQskMiaJBgcpLz54gN2BCfwtZbQhQryyX1USbY9w",
  "Ae2tdPwUPEYyqZkHD95BoP6VG5QUFrBhRszzF22V7yLXQ6tbDz1adSngWuA",
  "Ae2tdPwUPEZ79v6YFFVHc36TEK3ZcMrx9WKvdHGPAyo7GNJaJSJTvpj6qRv",
  "Ae2tdPwUPEYzrPovpHYMB6RicizWGs4Yuk7MVXbRAVjxeHxGobNHqD4L38n",
  "Ae2tdPwUPEYwtg1ZFm3PEy7i4cTsUsU3Qtr7AjeZeFQxBLuCuzF2oRFPUQy",
  "Ae2tdPwUPEZFQtVKukoWcwF5EXTu3ZpsCqC9w995ADa3Eha5qX6SoZ9wo3A",
  "Ae2tdPwUPEZLJm5VniHx4LrQMrQ1PYaqt9yH4gKc3vNa8m6JmaoY5vSRRSU",
  "Ae2tdPwUPEZH68mewKHyc68nMNpjf95RuQCU9PXk7oH1cxYLPCmJaRvx9CJ",
  "Ae2tdPwUPEYwaAGoURA22Jf9zvHaL9q4M14s6udFgBAqZV8EPG2kY5mKoPj",
  "Ae2tdPwUPEYxhEYgzkX5d76wycfScXbY82MEcSsRY8yuXE5GmbC5DSmz2mv",
  "Ae2tdPwUPEYvt7aesYnax2pNCvwRuTSWs9EwEkDytcB9WtcJyAgPGyWgbkH",
  "Ae2tdPwUPEZLeSFAWmMkMckkurexkpcKfhrBGVYYucuWBHcyV8f4tMm4obD",
  "Ae2tdPwUPEZD6zdTnuB9LYa2KVBGxf728CtMXFzFjVtiMpqPiHdeU4xZB8T",
  "Ae2tdPwUPEZ6c41xzmWqQHg7XEbubBd6DC6UyWhQx728o9K6mhbsBpLh3TE",
  "Ae2tdPwUPEYyM74mvX1nhWohKSaMX2PAbbdW42qftUVXQQYkyuibcYCYJ26",
  "Ae2tdPwUPEZHKqkUMDgrCgHN7frFTDrQKzPwJKMYUwnb7HLxBkKAmmhm4MN",
  "Ae2tdPwUPEZ7kAeyLJWCXzbXaBAiTwyAuUypGYWsfro4YuTn1xLza8nnTgn",
  "Ae2tdPwUPEZFMaFnraupBnssvnR6fZwAPGsWQXJoTfn76tc2wRZicTByps6",
  "Ae2tdPwUPEZJAFQG9tenhQnYDYbaR3tUqXAmfHH1LR8bXf7YCscdtVEm1DD",
  "Ae2tdPwUPEZ7z2RuzPjbYwWFULEwg7L15jtC12se7zLHhwmbooBtepJTqzY",
  "Ae2tdPwUPEZ1jYCzS7BJHozfyRggEvgSgypbsNqDqaGPwmWvQTYqaFgwS8N",
  "Ae2tdPwUPEZ627kt7JaUugamTUaR4JZQpMfA8caFGVUq3DUeGpu5DnaMAGR",
  "Ae2tdPwUPEZMJsbKQpNehb3q3RS4BuwFwzs2ys12qQYkXHE5Eiyh6QWXbaa",
  "Ae2tdPwUPEZ4dsXjdF18RmqDsufVdyZFv7SQhkmmKQg9kFg69VsG684EjXt",
  "Ae2tdPwUPEZNDDV3zijEEuHoFRfNbSwMSEWoFPikX7LdEb9MHuv2t5zW5Br",
  "Ae2tdPwUPEZJWms9KCatb5P4QJvxXvotF3326AufLuf6Aew8DQ7HBmA6kjY",
]
`;

exports[`ByronWallet create 2`] = `
Array [
  "Ae2tdPwUPEZMbGMfD9PHAqHvmDqWg2ZPqhrN9Zzm8PgNjMC37VGTKo7FKx6",
  "Ae2tdPwUPEZG6mdoMvxpSUktVDyqfxx8QUjGa4ZSbj6WcUzkQLzhssZee88",
  "Ae2tdPwUPEYy1nSC4Kw1MDbLTFs8kBpYL8XLfNnHYax5fZ6QnpUSZxPw743",
  "Ae2tdPwUPEZFwRmG6A4ePxe4m89FqNY7eJRBvotJxKCtrbN6yCF27W3LhnP",
  "Ae2tdPwUPEZ5o4e7F5CqHPrzmJEVM92sDrTudkh8UFKUnro972YKGZNvk9p",
  "Ae2tdPwUPEZGKDXo2N4J9dnSzPY2Ph3Vt4gThnTHdxiZkkWpnwVLbvXD3Ej",
  "Ae2tdPwUPEZAQbAP2tNzLkziTUbCYtk86bHGH5ZaLRPaYdasqEFsj2J1vP3",
  "Ae2tdPwUPEZFWUWMxJQQMRrqopbyBg5VDfUhW9gLN48EUREduMcgmkSQHt5",
  "Ae2tdPwUPEZNDcPZHt2cpgKCxFsaVk6H3Bw484msDKshKevYA29xNDirY4m",
  "Ae2tdPwUPEZ19YKgoR5cYJSepa78STkjNvaEknKUpJQkHesoPQpsaBJUJkV",
  "Ae2tdPwUPEZ6P3EcPn6ymF7WNhAhxXBT7rgUkFx7DWSndh3rJqTZZrfNNnr",
  "Ae2tdPwUPEZJFjE8ScyG1YAQuFktLeCmEe8CAGM6HRecMB55axfTg8ydwqA",
  "Ae2tdPwUPEZGL3ZwVTnnBhGCStB4KiShutjnijZUNcvoCLWa797cTfRVsDZ",
  "Ae2tdPwUPEZ9D9FG77LmLShTWpTuHHDMuHfJy6nQ5VwGkijRpppZERkubwR",
  "Ae2tdPwUPEZLtah5LXLfQiF3SV8zuYc3gxwAUPipEobuKjYmEv1Rt7Q92hP",
  "Ae2tdPwUPEZBYfnYKLTMuktXXnXYaVJD6Zvefx7ohgvobAQ89qVZk6Z1XEC",
  "Ae2tdPwUPEZ69foWTxe1VgsGHDsgkERecH7CBXNF3bXuZ18pi2ShDuR6HDv",
  "Ae2tdPwUPEZKbCkjF4UeQP6hKASZC7arKrNAuadRimQybPwkn2oKdBA7YUf",
  "Ae2tdPwUPEZ25pjg597VeuCcFrzTNQ7mRAza2WuLUfweibWuh1hrVnt3N7k",
  "Ae2tdPwUPEZ67G2KrZRBgJgNDy57EasSGRNvr469YBrGotYgWyy14v2k8sH",
  "Ae2tdPwUPEZL5VMTHpP8BEJVoqhQDrh8KGr4F83DBBPC8Fp76G5odjVT4GG",
  "Ae2tdPwUPEZMzp389m92LrWjc5MJSGPweikfUvNXAM3wBotbuN3vaCj31SP",
  "Ae2tdPwUPEZ7oAyziKqJ8yvShgbM9tpxcc1YTdjwnwDsogzviDrfmPLzEfD",
  "Ae2tdPwUPEZC2bCxWgaLKCfpRkdysqAW5azYJCkdrSco1iLNbZJCdYfeurR",
  "Ae2tdPwUPEZEpggE418CsJQwFZFyjVSKYX5VtNKKtcBFtoyzQbXZWWQfNHc",
  "Ae2tdPwUPEZHZ5AGveVvv9CZQtzV49FtJF8t5fAQJzf8Sig6zK5AjsoEsVN",
  "Ae2tdPwUPEZCUt46emj9HRPdhEbRddM7ZoHRj7ezEw4KK594taa6HhhvWzU",
  "Ae2tdPwUPEZA7byqCD11vwMZQCRBs43XWQgRwp67SbMmCaZmiZZM3fnYNjy",
  "Ae2tdPwUPEZHsgH6nNTzYR7K8VBYB7h2iLaxxWm6XsLXKApF57GGVVUQAob",
  "Ae2tdPwUPEZDUJ7ezyREX9Ca4YzWm9ktEXNkuTh231ngfQPkb1HUmZYLPyd",
  "Ae2tdPwUPEZJX13pxaCTxC9kvo3S6UUiRmnUEX9F1bDuHj2x2A758HWSe4c",
  "Ae2tdPwUPEZGbtHNjHcVnRu2nLha1kgW6H3zPb35RNfCUc4ih9Mtuj84ktp",
  "Ae2tdPwUPEZFXoGcvGXkkqm38xms4oKU9hHtqviCiPWpqt2ZpBQm4E3Xhey",
  "Ae2tdPwUPEZCLo16n1ghHjF5MPmXBKGuT7bobAE2o5WjUqxn5qBzRkqg82L",
  "Ae2tdPwUPEZ5jGaQpaVezvaKXStWuj65vnESk5W95n5eaHQNsrrybuT7ZFm",
  "Ae2tdPwUPEZCmTi6e439vcknmPPFqGPL28oQyu11395CThcwfP2BzpDJLBu",
  "Ae2tdPwUPEZ912gyZPHhxLfcBVSJtKoc5nM5BMFPZFLtFw2iNsUXCtwnCAj",
  "Ae2tdPwUPEYyBBcTYUzbRC5n74Nke3KM7z7zAdHKmd9DebHkZb1r7MemrVQ",
  "Ae2tdPwUPEZAGgQ8k7QjrUDcoSEQ1zHUFSmJi1v86eQhjGZ9TCd7YbffcEC",
  "Ae2tdPwUPEZKpqQ47wxzykKTg4J6GwybWRUUB2TLvrUTXtvNUowo2EQ5riD",
  "Ae2tdPwUPEZE4np5YHJtMz7eeu4DtYyBMAy39sL5DAzbZwx2N4hkrBT422e",
  "Ae2tdPwUPEZLo6rnJjtPAmGByZJMysJ1LZh4hDdqmDZBpdPnQg9wzpgMCGN",
  "Ae2tdPwUPEZ8VFR7gRPuLLunQe7PRFFLn4S2R3YjGaknTwhixpCawX486Bt",
  "Ae2tdPwUPEZ3dnLkxTqAyV2SmHzGJDAXsfhr2Y7KwjnWJvmBdrDt1BeX4RC",
  "Ae2tdPwUPEZ3N1eMQycX4YA1qwFGX3AuxEFbzjxCr2DvpmQgtHZLuTTZhG3",
  "Ae2tdPwUPEZEjcJE6Y9kebfyBvhyvxkyanGTLsNe7zcBNgKZw7sojr9SXph",
  "Ae2tdPwUPEZ9H83VWGeaZz4ES1EYabbWFaVJLynYEXXpQGYYFwSUM1LPnMU",
  "Ae2tdPwUPEZDTVbqvN2gJ5T91q2Jm2Vf7EHMmqLpJnSHDWgACLpH9jvTEtN",
  "Ae2tdPwUPEZJqXWwcEMTepPMpRVTYx6u7e2VGU43eB78MzNBNo7CMPAs8YE",
  "Ae2tdPwUPEZ7oWftmJUV47jHymfdf6k9T1RtxytWNAoj53MXNpgCjn8tD4J",
]
`;

exports[`ByronWallet create 6`] = `
Object {
  "externalChain": Object {
    "addressGenerator": Object {
      "accountPubKeyHex": "6c2311e6e7a934751c55054cb21ab844f2e55baa48fc8f298dd54430f116d1c14c5f12d15611670454e05efac74e8f5d5e887ae2c15ef3086e0691d0d8439665",
      "type": "External",
      "walletImplementationId": "haskell-byron",
    },
    "addresses": Array [
      "Ae2tdPwUPEZMbGMfD9PHAqHvmDqWg2ZPqhrN9Zzm8PgNjMC37VGTKo7FKx6",
      "Ae2tdPwUPEZG6mdoMvxpSUktVDyqfxx8QUjGa4ZSbj6WcUzkQLzhssZee88",
      "Ae2tdPwUPEYy1nSC4Kw1MDbLTFs8kBpYL8XLfNnHYax5fZ6QnpUSZxPw743",
      "Ae2tdPwUPEZFwRmG6A4ePxe4m89FqNY7eJRBvotJxKCtrbN6yCF27W3LhnP",
      "Ae2tdPwUPEZ5o4e7F5CqHPrzmJEVM92sDrTudkh8UFKUnro972YKGZNvk9p",
      "Ae2tdPwUPEZGKDXo2N4J9dnSzPY2Ph3Vt4gThnTHdxiZkkWpnwVLbvXD3Ej",
      "Ae2tdPwUPEZAQbAP2tNzLkziTUbCYtk86bHGH5ZaLRPaYdasqEFsj2J1vP3",
      "Ae2tdPwUPEZFWUWMxJQQMRrqopbyBg5VDfUhW9gLN48EUREduMcgmkSQHt5",
      "Ae2tdPwUPEZNDcPZHt2cpgKCxFsaVk6H3Bw484msDKshKevYA29xNDirY4m",
      "Ae2tdPwUPEZ19YKgoR5cYJSepa78STkjNvaEknKUpJQkHesoPQpsaBJUJkV",
      "Ae2tdPwUPEZ6P3EcPn6ymF7WNhAhxXBT7rgUkFx7DWSndh3rJqTZZrfNNnr",
      "Ae2tdPwUPEZJFjE8ScyG1YAQuFktLeCmEe8CAGM6HRecMB55axfTg8ydwqA",
      "Ae2tdPwUPEZGL3ZwVTnnBhGCStB4KiShutjnijZUNcvoCLWa797cTfRVsDZ",
      "Ae2tdPwUPEZ9D9FG77LmLShTWpTuHHDMuHfJy6nQ5VwGkijRpppZERkubwR",
      "Ae2tdPwUPEZLtah5LXLfQiF3SV8zuYc3gxwAUPipEobuKjYmEv1Rt7Q92hP",
      "Ae2tdPwUPEZBYfnYKLTMuktXXnXYaVJD6Zvefx7ohgvobAQ89qVZk6Z1XEC",
      "Ae2tdPwUPEZ69foWTxe1VgsGHDsgkERecH7CBXNF3bXuZ18pi2ShDuR6HDv",
      "Ae2tdPwUPEZKbCkjF4UeQP6hKASZC7arKrNAuadRimQybPwkn2oKdBA7YUf",
      "Ae2tdPwUPEZ25pjg597VeuCcFrzTNQ7mRAza2WuLUfweibWuh1hrVnt3N7k",
      "Ae2tdPwUPEZ67G2KrZRBgJgNDy57EasSGRNvr469YBrGotYgWyy14v2k8sH",
      "Ae2tdPwUPEZL5VMTHpP8BEJVoqhQDrh8KGr4F83DBBPC8Fp76G5odjVT4GG",
      "Ae2tdPwUPEZMzp389m92LrWjc5MJSGPweikfUvNXAM3wBotbuN3vaCj31SP",
      "Ae2tdPwUPEZ7oAyziKqJ8yvShgbM9tpxcc1YTdjwnwDsogzviDrfmPLzEfD",
      "Ae2tdPwUPEZC2bCxWgaLKCfpRkdysqAW5azYJCkdrSco1iLNbZJCdYfeurR",
      "Ae2tdPwUPEZEpggE418CsJQwFZFyjVSKYX5VtNKKtcBFtoyzQbXZWWQfNHc",
      "Ae2tdPwUPEZHZ5AGveVvv9CZQtzV49FtJF8t5fAQJzf8Sig6zK5AjsoEsVN",
      "Ae2tdPwUPEZCUt46emj9HRPdhEbRddM7ZoHRj7ezEw4KK594taa6HhhvWzU",
      "Ae2tdPwUPEZA7byqCD11vwMZQCRBs43XWQgRwp67SbMmCaZmiZZM3fnYNjy",
      "Ae2tdPwUPEZHsgH6nNTzYR7K8VBYB7h2iLaxxWm6XsLXKApF57GGVVUQAob",
      "Ae2tdPwUPEZDUJ7ezyREX9Ca4YzWm9ktEXNkuTh231ngfQPkb1HUmZYLPyd",
      "Ae2tdPwUPEZJX13pxaCTxC9kvo3S6UUiRmnUEX9F1bDuHj2x2A758HWSe4c",
      "Ae2tdPwUPEZGbtHNjHcVnRu2nLha1kgW6H3zPb35RNfCUc4ih9Mtuj84ktp",
      "Ae2tdPwUPEZFXoGcvGXkkqm38xms4oKU9hHtqviCiPWpqt2ZpBQm4E3Xhey",
      "Ae2tdPwUPEZCLo16n1ghHjF5MPmXBKGuT7bobAE2o5WjUqxn5qBzRkqg82L",
      "Ae2tdPwUPEZ5jGaQpaVezvaKXStWuj65vnESk5W95n5eaHQNsrrybuT7ZFm",
      "Ae2tdPwUPEZCmTi6e439vcknmPPFqGPL28oQyu11395CThcwfP2BzpDJLBu",
      "Ae2tdPwUPEZ912gyZPHhxLfcBVSJtKoc5nM5BMFPZFLtFw2iNsUXCtwnCAj",
      "Ae2tdPwUPEYyBBcTYUzbRC5n74Nke3KM7z7zAdHKmd9DebHkZb1r7MemrVQ",
      "Ae2tdPwUPEZAGgQ8k7QjrUDcoSEQ1zHUFSmJi1v86eQhjGZ9TCd7YbffcEC",
      "Ae2tdPwUPEZKpqQ47wxzykKTg4J6GwybWRUUB2TLvrUTXtvNUowo2EQ5riD",
      "Ae2tdPwUPEZE4np5YHJtMz7eeu4DtYyBMAy39sL5DAzbZwx2N4hkrBT422e",
      "Ae2tdPwUPEZLo6rnJjtPAmGByZJMysJ1LZh4hDdqmDZBpdPnQg9wzpgMCGN",
      "Ae2tdPwUPEZ8VFR7gRPuLLunQe7PRFFLn4S2R3YjGaknTwhixpCawX486Bt",
      "Ae2tdPwUPEZ3dnLkxTqAyV2SmHzGJDAXsfhr2Y7KwjnWJvmBdrDt1BeX4RC",
      "Ae2tdPwUPEZ3N1eMQycX4YA1qwFGX3AuxEFbzjxCr2DvpmQgtHZLuTTZhG3",
      "Ae2tdPwUPEZEjcJE6Y9kebfyBvhyvxkyanGTLsNe7zcBNgKZw7sojr9SXph",
      "Ae2tdPwUPEZ9H83VWGeaZz4ES1EYabbWFaVJLynYEXXpQGYYFwSUM1LPnMU",
      "Ae2tdPwUPEZDTVbqvN2gJ5T91q2Jm2Vf7EHMmqLpJnSHDWgACLpH9jvTEtN",
      "Ae2tdPwUPEZJqXWwcEMTepPMpRVTYx6u7e2VGU43eB78MzNBNo7CMPAs8YE",
      "Ae2tdPwUPEZ7oWftmJUV47jHymfdf6k9T1RtxytWNAoj53MXNpgCjn8tD4J",
    ],
    "blockSize": 50,
    "gapLimit": 20,
  },
  "hwDeviceInfo": null,
  "internalChain": Object {
    "addressGenerator": Object {
      "accountPubKeyHex": "6c2311e6e7a934751c55054cb21ab844f2e55baa48fc8f298dd54430f116d1c14c5f12d15611670454e05efac74e8f5d5e887ae2c15ef3086e0691d0d8439665",
      "type": "Internal",
      "walletImplementationId": "haskell-byron",
    },
    "addresses": Array [
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ6WrBifkRWytn1V4VQ9t2Ea9eQxfQP2TRPyJDLN5eAJt55QLy",
      "Ae2tdPwUPEZ5hh76MV9uRWiNJYFXYKR9UtMyQY89ct7Q5WugHYBi7rXGtiJ",
      "Ae2tdPwUPEZ2XtPVCpvD1qLctRbm7iiJA9F3y53to6xHCZfexgAPLsoJjDE",
      "Ae2tdPwUPEZ1imz9hf2SmRvpFWyLCp8UMpHUreKta7mj88DzauTp7xG3XZ2",
      "Ae2tdPwUPEZKt9scQjzAFEKyuC33g3ARj94kex1S1kfHB9LWLA8Yp5WXVow",
      "Ae2tdPwUPEZF3MvPbbmP6bBysYDC5tHcMrVajZP2wiJ9Zi5ywSeZjVwZ1FL",
      "Ae2tdPwUPEYztvVSupCi3pWGYs3NmPbNzgmUo8sRhG588cScRL7Y2WDLpN1",
      "Ae2tdPwUPEZ2jyTwKkSVvvUGoSeYr4w69NEbA2BdqDhsvhMYQWEBvKDg8Vv",
      "Ae2tdPwUPEZ7YsiGerhsSiA14ZKZwhxy4LHqomXmK1TAFiWLEdE9THEQYrX",
      "Ae2tdPwUPEZDZp9YNnXCy2KCUdpm3UnHniAa3Ezwuf9H9SYdkXoLgS5LNWT",
      "Ae2tdPwUPEZ2cmvpsXk2hEBJDUhPvWmq1fuT3GDGJuJuX5mnwnBo5RTHQDs",
      "Ae2tdPwUPEZKf9FhZ4iDe2TceEvq9cRZRSV8kjQSb99m4c2hEsRbTuDhBDC",
      "Ae2tdPwUPEZ5ivCg8JwncgNmBokPjmwNKgNjQfbvB98LHqZFQUE3DqMEmmf",
      "Ae2tdPwUPEZ9unWaUPwie7PfeCxLRBDkeorrNrJXVyNXaGCZocXLyswvH8U",
      "Ae2tdPwUPEZLhL4ghH1TLhYCQK78S8axqpRsmwdG9TD3V8ZUaT6rBN8vqgt",
      "Ae2tdPwUPEZK8bwdVFKCfTUDkJGhj6z19XP3KAs2cJYucEPh4sCPYfZ915Z",
      "Ae2tdPwUPEZ4iRigLuwpnjYk7YgzdYErgCvyZjLRtZeeXpgkXtvXFRxQcZ9",
      "Ae2tdPwUPEZM4qGxS7F6kXJj6omjdnAdHgLmqLhqBDULnXpZwYWqKU3QYoh",
      "Ae2tdPwUPEZ9KjM56fEN8epENDFpD21uvvcVHurNaEEMWrgoqdR28Gi4UnG",
      "Ae2tdPwUPEZBBKA2uV1PisZm5aQv8T9UWi8g4rE7Tk79WN4ouctGfWvES2L",
      "Ae2tdPwUPEZEpvpeEeyyMTrQmyGPpvyE1NRyeyZd4qgjTbMdVFhYgtCRcJu",
      "Ae2tdPwUPEZ7quRFeKxaR3iM9G3ZwMgZYR2FqQKXohG8kzpuFpjs6e4CdPk",
      "Ae2tdPwUPEZ4bPbCUHrK2k3crAepLioTrEVNAuAs5vHig9JH5wezgt8MSPG",
      "Ae2tdPwUPEZKhL2Z5BfXQskMiaJBgcpLz54gN2BCfwtZbQhQryyX1USbY9w",
      "Ae2tdPwUPEYyqZkHD95BoP6VG5QUFrBhRszzF22V7yLXQ6tbDz1adSngWuA",
      "Ae2tdPwUPEZ79v6YFFVHc36TEK3ZcMrx9WKvdHGPAyo7GNJaJSJTvpj6qRv",
      "Ae2tdPwUPEYzrPovpHYMB6RicizWGs4Yuk7MVXbRAVjxeHxGobNHqD4L38n",
      "Ae2tdPwUPEYwtg1ZFm3PEy7i4cTsUsU3Qtr7AjeZeFQxBLuCuzF2oRFPUQy",
      "Ae2tdPwUPEZFQtVKukoWcwF5EXTu3ZpsCqC9w995ADa3Eha5qX6SoZ9wo3A",
      "Ae2tdPwUPEZLJm5VniHx4LrQMrQ1PYaqt9yH4gKc3vNa8m6JmaoY5vSRRSU",
      "Ae2tdPwUPEZH68mewKHyc68nMNpjf95RuQCU9PXk7oH1cxYLPCmJaRvx9CJ",
      "Ae2tdPwUPEYwaAGoURA22Jf9zvHaL9q4M14s6udFgBAqZV8EPG2kY5mKoPj",
      "Ae2tdPwUPEYxhEYgzkX5d76wycfScXbY82MEcSsRY8yuXE5GmbC5DSmz2mv",
      "Ae2tdPwUPEYvt7aesYnax2pNCvwRuTSWs9EwEkDytcB9WtcJyAgPGyWgbkH",
      "Ae2tdPwUPEZLeSFAWmMkMckkurexkpcKfhrBGVYYucuWBHcyV8f4tMm4obD",
      "Ae2tdPwUPEZD6zdTnuB9LYa2KVBGxf728CtMXFzFjVtiMpqPiHdeU4xZB8T",
      "Ae2tdPwUPEZ6c41xzmWqQHg7XEbubBd6DC6UyWhQx728o9K6mhbsBpLh3TE",
      "Ae2tdPwUPEYyM74mvX1nhWohKSaMX2PAbbdW42qftUVXQQYkyuibcYCYJ26",
      "Ae2tdPwUPEZHKqkUMDgrCgHN7frFTDrQKzPwJKMYUwnb7HLxBkKAmmhm4MN",
      "Ae2tdPwUPEZ7kAeyLJWCXzbXaBAiTwyAuUypGYWsfro4YuTn1xLza8nnTgn",
      "Ae2tdPwUPEZFMaFnraupBnssvnR6fZwAPGsWQXJoTfn76tc2wRZicTByps6",
      "Ae2tdPwUPEZJAFQG9tenhQnYDYbaR3tUqXAmfHH1LR8bXf7YCscdtVEm1DD",
      "Ae2tdPwUPEZ7z2RuzPjbYwWFULEwg7L15jtC12se7zLHhwmbooBtepJTqzY",
      "Ae2tdPwUPEZ1jYCzS7BJHozfyRggEvgSgypbsNqDqaGPwmWvQTYqaFgwS8N",
      "Ae2tdPwUPEZ627kt7JaUugamTUaR4JZQpMfA8caFGVUq3DUeGpu5DnaMAGR",
      "Ae2tdPwUPEZMJsbKQpNehb3q3RS4BuwFwzs2ys12qQYkXHE5Eiyh6QWXbaa",
      "Ae2tdPwUPEZ4dsXjdF18RmqDsufVdyZFv7SQhkmmKQg9kFg69VsG684EjXt",
      "Ae2tdPwUPEZNDDV3zijEEuHoFRfNbSwMSEWoFPikX7LdEb9MHuv2t5zW5Br",
      "Ae2tdPwUPEZJWms9KCatb5P4QJvxXvotF3326AufLuf6Aew8DQ7HBmA6kjY",
    ],
    "blockSize": 50,
    "gapLimit": 20,
  },
  "isEasyConfirmationEnabled": false,
  "isHW": false,
  "isReadOnly": false,
  "lastGeneratedAddressIndex": 0,
  "publicKeyHex": "6c2311e6e7a934751c55054cb21ab844f2e55baa48fc8f298dd54430f116d1c14c5f12d15611670454e05efac74e8f5d5e887ae2c15ef3086e0691d0d8439665",
  "version": "1.5.1",
}
`;

exports[`ByronWallet create hw  1`] = `
Array [
  "Ae2tdPwUPEZ5MPt1BeMo4fpuo9Kef4VZ4XmjXu9D8NLx3bno2XZiTCnGf4a",
  "Ae2tdPwUPEZ54f1By5Z4CDaiW41cEjSdtQamA8aBwjgkWsG1uEEHFr3H34X",
  "Ae2tdPwUPEZM9c8NX1jwrMbKTG8NgdnFTvojABhZcKg4DWkQsN5zTcpFe9G",
  "Ae2tdPwUPEYyEQK3XbV5EqmbGN2wxjxeqDGw2n4mUeBfdNYChMeYn5eenYy",
  "Ae2tdPwUPEZ6GPgDsSNkuLL1N71tTMAsytC7MaRnoTqZpjUKzpcZzPPBHbv",
  "Ae2tdPwUPEZ8PyZWpXY85G4hrkxD8zHMhav7KYHQn7sEToZQ6fUgWANB5Ce",
  "Ae2tdPwUPEZJSnp1Q4wamvz2mm8ULV8DxF8yBT3oRWud1p6R4t7tqABLWJ8",
  "Ae2tdPwUPEZBBe8KwpWxvQ6qhYgbNG9TjFZAUiy6K2ut5E2NVmHoo296a3P",
  "Ae2tdPwUPEZC4NkGP5Gh9hzJ1eVykox5cA712JT2BDMqmJTnA1yvxxs2Rhd",
  "Ae2tdPwUPEZ9aAnrkGU6UWmPjq5tA4vuosiNk7kQM748AkpaggTeeNqZMC5",
  "Ae2tdPwUPEZ96iHQjJcw4hMHELRkwyQonhoDARahjsQjgjc4zTS2m6bg1K4",
  "Ae2tdPwUPEZ5DjN4q4CqgUvp9ZKdDCHmNRJJThHaQJWcZPtT9NH6WAdKSJw",
  "Ae2tdPwUPEYwJiCbdyEKVciiR9wWjwq1EtQTcYxCZhLXBDgAZ6Y8GkNUZZy",
  "Ae2tdPwUPEZ1CVNmqmdh155ALmLaYFYQHomAJtpeWvQTy9SSSVfgJKz1Ug4",
  "Ae2tdPwUPEZ51d6xRmwBYXWrGvV4QKteuHZGGPtRvbGwerzhWQpmUUSAArw",
  "Ae2tdPwUPEZHQ7UXozoF2FrgM3azFDcgQbLHJxP4fPtBZwwqXVU1k9tHwhb",
  "Ae2tdPwUPEZDthWAwwc5XeJw5ZchYboxZLDVK2HVssmSQvKJcnrehfR4iX6",
  "Ae2tdPwUPEZ7LrEPgpp46ZT7L3LvzEgTR3majx7iUbD18LQf7HkqzoTZCT2",
  "Ae2tdPwUPEZ2u5aze1KoWKYtzoWzyRGaNdgino9UyMGCvwzbMXr4Pyezjyr",
  "Ae2tdPwUPEZGtEX3PHyeG7N3UJabbE1JJcdqCwtEqp6wwsr3sMFwcVVHgzY",
  "Ae2tdPwUPEZC2Lyc2uptJTACkveFPiFfo9wGKEN77GmuPZrh7neiL6ckCPG",
  "Ae2tdPwUPEZKA7V4x28VdtteG77aQ3ZLStUZszDRfnMddvDrn2e6TtHJoP7",
  "Ae2tdPwUPEZ9guXjpErRSALwntEJNTvzAp9E1fw8RLUQqyBWyhN4E9vRNQG",
  "Ae2tdPwUPEZ72gRtr2XAKmFXCbcCCcVMm1x94VPgeqZ4du1H67fahX8H6GU",
  "Ae2tdPwUPEZKVdaDpsWtgVKK7DTfBtpPFkPDoQEJs1pwmvnHLw7ev8VFiso",
  "Ae2tdPwUPEZK96yYC95K1kpAaBp9r8y1p8sH9uZpjRBYthNQmHMmdMmrjpV",
  "Ae2tdPwUPEZ9fJE1cNTGZoo7QA4YpMacLHhb6ViKfSxfHoBESuzaY4phRH4",
  "Ae2tdPwUPEYxjM5erUZ5mxJohdfsLqcGa8UaYf1sCofQgCKJHhQgEhiFczH",
  "Ae2tdPwUPEZArCQwqnJScgPBa6ykRDcMHvmygjqHEzzSVGHcchidE8Nmqju",
  "Ae2tdPwUPEZA6mxWnwvWCNErmB42WYdghmG8YopGYwS5WPmukXgHPg8DUca",
  "Ae2tdPwUPEZ8xxSsE6sSSd6Rip5Bqoh3GcKXfqBu2YdNkEQnpc7bPExKGZP",
  "Ae2tdPwUPEZKkJgWav5VLLhdokKvhgsq1AARVu67ye86pXqwqG7mLHBpc4k",
  "Ae2tdPwUPEZ69cxVix4wXyTLnav5M816FQ53PsCdTFbKLAMgK56vHczF7Ri",
  "Ae2tdPwUPEYzQ2Xtbe6SrvsoMMPYnJATXwTzw9FUSz8vtoPMhdty8seYWM5",
  "Ae2tdPwUPEZ3Un888im5RSqXZbiNMX2Nawfy8bKeDfPZXPqkwQEhEuNFcRR",
  "Ae2tdPwUPEZHFjNJG7o3QK6eWUciNTg82p3ktiYPiwizckTs6hJccDAN9om",
  "Ae2tdPwUPEZNKczsRDT87LsQGbp456bJzPW2cYABRu4wVbyeTTuZKqt6CMu",
  "Ae2tdPwUPEZHGPw91Be6peGMZ6UBUBMnKe8naFkF6BEuyvyWCjGqzWb6qsR",
  "Ae2tdPwUPEZK3fu5nknh2dn5VzkxX7MJZ6aGF8J44Z1CBg5E9VEhGEEQK8M",
  "Ae2tdPwUPEZMhjbNnnZGo7tJhF1FopdYi88TESXA3aqJ3F2pxyeyes5xT2M",
  "Ae2tdPwUPEZHhzsD5HyRdpLumW1fSS4o7X9g2XwQaVQhMTRbZdJXeCMURFE",
  "Ae2tdPwUPEZB4myrdA9rRXc6rhYHzsigPy8GB8Y16YuATc1ZNLvdsUaNCgc",
  "Ae2tdPwUPEYxirvGx85vcrugKFbfae8mjUWcVZiHVDhvy5nc8izpN1bF1jb",
  "Ae2tdPwUPEZ7htS9yLbLVPE5o3t8aMU6RuB6XNwf61reMfGuNNMAvUPAHA5",
  "Ae2tdPwUPEZ8K3y9j4FpPEcTo1qHn7fmkPE358GbosQxT8ctPAZ7isPzjug",
  "Ae2tdPwUPEZC4UHLQEXNtXa5hkX8439moGe3UeCKr6Fmhs6bzsVB2dRtQXX",
  "Ae2tdPwUPEZ8Kr1KkgZBfxGyaEqAqXgRGScUUbDpNRgMRutsDAMWx5nAp9e",
  "Ae2tdPwUPEYvwerPvabm3KD4QCmDGTd3V4VMtXmzLt8tDNfaiU6t2ypET8c",
  "Ae2tdPwUPEZLPLaDZTrqwdQjKELMLwCFHAuipyujrZWCiNHJ4KgoiVe6XK4",
  "Ae2tdPwUPEZ8qP89KVXPz8mR3v6KjbPb9gocep4bL1BWLUJnuEm2UHiSsNd",
]
`;

exports[`ByronWallet create hw  2`] = `
Array [
  "Ae2tdPwUPEZA7FAfha6PABzvJLMAE9dFvKwW4DQ2AKT8SQak7biEaw3gNpU",
  "Ae2tdPwUPEZAR4C6W4uFMbMrw96dYnKaYsKsgxzxgp8jfVapwa1jJhsPfka",
  "Ae2tdPwUPEZ9TVdYBV5zm9fJQHgaEgp3zHXBBwQVUy3gCw1bemaGatvq2Vv",
  "Ae2tdPwUPEYwUih2tx7PPQUzVEMBvQ2qSiLDdM6wizsGUV7Xh9x8gZNy7P6",
  "Ae2tdPwUPEZAnvcLx9bkqLiyFkbt3K7BAytJNfUQ6jEevYwX6Afvm7UXLfG",
  "Ae2tdPwUPEYyLxDLAT9xE6rbkYPi48GixV8sKpDbvjb6w8ARfm4rGufyV8e",
  "Ae2tdPwUPEZK5QHMyTE1Ga57tCJTPfBagqBM7FiUs2gFfCSNLSWXrzM95p4",
  "Ae2tdPwUPEZAtYxSXuF6pteF8sdV1wXq1kqDvWDoLFBBZmEMKaGnEUhvqsA",
  "Ae2tdPwUPEZ2nHxnYVdtHf2sMkEEY6E9JecRDHrfcSeRtxavfDnZRiodqEa",
  "Ae2tdPwUPEZDG5w8zuJUxpKVLtrB5yE5ZkPMsHaYW7XnUXq1MKC2LVcSDCA",
  "Ae2tdPwUPEZ6bcqLWfteRYGM5xsFoYC8RNcEGpHt4FPktTozEQ4sjMDAwM1",
  "Ae2tdPwUPEZ4uUfr6q6eBMKVy5rfVanhvBUC1a84sEtxbHeMytjKMuhaA2G",
  "Ae2tdPwUPEYxoYLtW1qxx27sKG741YoyqSf6V3nRPjW41gSSQzF5f6yC5G2",
  "Ae2tdPwUPEZL3oqZb6UHAhgnfe8DKWRbQSXZqn9j6dskJXU6yVigr7LesWF",
  "Ae2tdPwUPEZ3tbtUjxq9xcdt5MaK3Uj3b2V5q5ZNzHvdQZCB4suHKJtNxEP",
  "Ae2tdPwUPEZBcScx6CucWk7rj1whCxRWaDJhbuaG63bof7STTBBac24QCej",
  "Ae2tdPwUPEZHfeziwYFphVen11jDBPwnyHanA1xDMHh2bwWJzcF1kXqn1TW",
  "Ae2tdPwUPEZAoSNGVtewczf7CocmNiheigH1DA6Mzh6BUx4Nej9caUMiv64",
  "Ae2tdPwUPEZJqTaBBVkSTboJqhfFRLqNLjmzEps3jWxb38N4FrpgXM8C9go",
  "Ae2tdPwUPEZJJYSJLeoTA1Z6URzJnso7YVRKmeYnVLQPLufTqqspf4NETAb",
  "Ae2tdPwUPEYyTzKvdsLEJ5VyTkzrsh6FX8rAkU9DvzAfNDy8j8RnAJCAPXs",
  "Ae2tdPwUPEZEc1hTdxjLoLw7Yeh9aUdPzbZFC4p3QDgvHbSGaryB7fCHxig",
  "Ae2tdPwUPEZ3NrewL7x6UerKgt4eVSWcmr8e5XR7ZKFuHG6mzPV33gozXA7",
  "Ae2tdPwUPEZGJqjPefpQ1QGf67DipvKkRaGh9T4581NQbBKayWhqqiCuxYN",
  "Ae2tdPwUPEZGCiGZuVRDNbWBZvVKWtFS4BM82j7na6NF4fZ6rxkUJZM8Mmf",
  "Ae2tdPwUPEZ2vrkfWzmKpUU8Hivtf4EwEipi4bmVUaXxCudGJBe57LGmet3",
  "Ae2tdPwUPEZ1WDNSA5NmBKGPVDqvQjacqU8HERUZ8kXEu9ceJ57mUkYkJSw",
  "Ae2tdPwUPEZEN4cXNfBgNfKEVjnHgEr2yfBdJjAgtwVvTfr8EdHpQV2KZpN",
  "Ae2tdPwUPEYwcjLFZAGogzJovEeyENnbWmkDPHK3X2ySbgTbrxtHGXDtcvp",
  "Ae2tdPwUPEZ4aRMWjG6FQTqAKmTxMUo4JyQ1Ym88P9ZYifmaGzETgbxHhaJ",
  "Ae2tdPwUPEZFDhFAd8fJPD2fBAEuLtysL76Tna6Xng2Zuw691rTftudkAho",
  "Ae2tdPwUPEZDfMMAjeqScEuatwuVs3poKMTupZ9vteCoaXCX46ekGcEJQ2M",
  "Ae2tdPwUPEZ7AkPis4Yg91yPdnyR92BqcdPERdwFsH5MrpuwEE9EwEy9rYU",
  "Ae2tdPwUPEZHjDJMCvV24Kfw9tBy15fTT4PuLR7iJ1XsZRNbzcjkA5DDeSR",
  "Ae2tdPwUPEYxmmuBc6qFzL5H7CQDvdLWXhmSnFQXfNXb76HJhCknq9Bax8p",
  "Ae2tdPwUPEZ3x8uH7gFoi71nT7jpuH1oy28SwQ1zxDQN1NtaKTjiA6o2nma",
  "Ae2tdPwUPEZLsbhHHMXjWGqNxMqtkBzoZaoNrRgnVvxoRnpb1L71b2qhSaS",
  "Ae2tdPwUPEZB2zsCjknYFVFgGuGiozg6NaQ8v2N3JBE4LCqDNZmYQXDChDe",
  "Ae2tdPwUPEZ8D4WJXrZxSrCV9kkMBik2VtgfGfGksd5SHoPzg5Upacpf67A",
  "Ae2tdPwUPEZMaWeT8ayieyLRDCSJ6uq66SYgD6XEyE6sUZSmCgqzUoVHewh",
  "Ae2tdPwUPEZ6Rv31RVSbtbUCwWacevfv29bqgxPp5XPSwpn6FiAD9dzLRSC",
  "Ae2tdPwUPEZN51USMf2p3bGtShBcUPU8SqbGUi17tchiFFrwT3b1B9YA5TQ",
  "Ae2tdPwUPEZCFJ9Pr32aTsvyqaF2C3ApDdhzYZu9dwW3A2W8xTkL3HwAX6n",
  "Ae2tdPwUPEYyNsQQCTeNHBxZchC9Cxp63Rbz7t9FFh9n7Zvtnpp1hVx2yEr",
  "Ae2tdPwUPEYxanbqkQdRvGfS9bbWvBZHv1RuUouMoxbTgptiugLTkcoDiwH",
  "Ae2tdPwUPEZ9XYMKAYRVpvTjN3wAcJwKxAQYRYRcNx6dD8yo5529L6iVKk7",
  "Ae2tdPwUPEZ2WBRatXLyH1uVkEoQvTtTovzsec3MEvbmxFs4fA4MUDUJYLd",
  "Ae2tdPwUPEZJE7VK943vgqqxMNmzP98hce884t4FMf9VA3yBqjpXYmux6z4",
  "Ae2tdPwUPEYwVDnFAcFh4rzbRje3wUuGPEzUEpGSJTYbCrhd9jwfHn6i7Bm",
  "Ae2tdPwUPEZKAQdsWLTno8sLN6r66QoWW3sH7AMnVo1YpD2bjDL3wqtQgeH",
]
`;

exports[`ByronWallet create hw  3`] = `
Object {
  "externalChain": Object {
    "addressGenerator": Object {
      "accountPubKeyHex": "1ba2332dca14d6f1f5a5282512e725852a34d3aee1cc26057e9cfb2c2730f1665934fa0b0fa42e16ded504fa81198e45dc22d10dab69398e730542a198dcbfcf",
      "type": "External",
      "walletImplementationId": "haskell-byron",
    },
    "addresses": Array [
      "Ae2tdPwUPEZA7FAfha6PABzvJLMAE9dFvKwW4DQ2AKT8SQak7biEaw3gNpU",
      "Ae2tdPwUPEZAR4C6W4uFMbMrw96dYnKaYsKsgxzxgp8jfVapwa1jJhsPfka",
      "Ae2tdPwUPEZ9TVdYBV5zm9fJQHgaEgp3zHXBBwQVUy3gCw1bemaGatvq2Vv",
      "Ae2tdPwUPEYwUih2tx7PPQUzVEMBvQ2qSiLDdM6wizsGUV7Xh9x8gZNy7P6",
      "Ae2tdPwUPEZAnvcLx9bkqLiyFkbt3K7BAytJNfUQ6jEevYwX6Afvm7UXLfG",
      "Ae2tdPwUPEYyLxDLAT9xE6rbkYPi48GixV8sKpDbvjb6w8ARfm4rGufyV8e",
      "Ae2tdPwUPEZK5QHMyTE1Ga57tCJTPfBagqBM7FiUs2gFfCSNLSWXrzM95p4",
      "Ae2tdPwUPEZAtYxSXuF6pteF8sdV1wXq1kqDvWDoLFBBZmEMKaGnEUhvqsA",
      "Ae2tdPwUPEZ2nHxnYVdtHf2sMkEEY6E9JecRDHrfcSeRtxavfDnZRiodqEa",
      "Ae2tdPwUPEZDG5w8zuJUxpKVLtrB5yE5ZkPMsHaYW7XnUXq1MKC2LVcSDCA",
      "Ae2tdPwUPEZ6bcqLWfteRYGM5xsFoYC8RNcEGpHt4FPktTozEQ4sjMDAwM1",
      "Ae2tdPwUPEZ4uUfr6q6eBMKVy5rfVanhvBUC1a84sEtxbHeMytjKMuhaA2G",
      "Ae2tdPwUPEYxoYLtW1qxx27sKG741YoyqSf6V3nRPjW41gSSQzF5f6yC5G2",
      "Ae2tdPwUPEZL3oqZb6UHAhgnfe8DKWRbQSXZqn9j6dskJXU6yVigr7LesWF",
      "Ae2tdPwUPEZ3tbtUjxq9xcdt5MaK3Uj3b2V5q5ZNzHvdQZCB4suHKJtNxEP",
      "Ae2tdPwUPEZBcScx6CucWk7rj1whCxRWaDJhbuaG63bof7STTBBac24QCej",
      "Ae2tdPwUPEZHfeziwYFphVen11jDBPwnyHanA1xDMHh2bwWJzcF1kXqn1TW",
      "Ae2tdPwUPEZAoSNGVtewczf7CocmNiheigH1DA6Mzh6BUx4Nej9caUMiv64",
      "Ae2tdPwUPEZJqTaBBVkSTboJqhfFRLqNLjmzEps3jWxb38N4FrpgXM8C9go",
      "Ae2tdPwUPEZJJYSJLeoTA1Z6URzJnso7YVRKmeYnVLQPLufTqqspf4NETAb",
      "Ae2tdPwUPEYyTzKvdsLEJ5VyTkzrsh6FX8rAkU9DvzAfNDy8j8RnAJCAPXs",
      "Ae2tdPwUPEZEc1hTdxjLoLw7Yeh9aUdPzbZFC4p3QDgvHbSGaryB7fCHxig",
      "Ae2tdPwUPEZ3NrewL7x6UerKgt4eVSWcmr8e5XR7ZKFuHG6mzPV33gozXA7",
      "Ae2tdPwUPEZGJqjPefpQ1QGf67DipvKkRaGh9T4581NQbBKayWhqqiCuxYN",
      "Ae2tdPwUPEZGCiGZuVRDNbWBZvVKWtFS4BM82j7na6NF4fZ6rxkUJZM8Mmf",
      "Ae2tdPwUPEZ2vrkfWzmKpUU8Hivtf4EwEipi4bmVUaXxCudGJBe57LGmet3",
      "Ae2tdPwUPEZ1WDNSA5NmBKGPVDqvQjacqU8HERUZ8kXEu9ceJ57mUkYkJSw",
      "Ae2tdPwUPEZEN4cXNfBgNfKEVjnHgEr2yfBdJjAgtwVvTfr8EdHpQV2KZpN",
      "Ae2tdPwUPEYwcjLFZAGogzJovEeyENnbWmkDPHK3X2ySbgTbrxtHGXDtcvp",
      "Ae2tdPwUPEZ4aRMWjG6FQTqAKmTxMUo4JyQ1Ym88P9ZYifmaGzETgbxHhaJ",
      "Ae2tdPwUPEZFDhFAd8fJPD2fBAEuLtysL76Tna6Xng2Zuw691rTftudkAho",
      "Ae2tdPwUPEZDfMMAjeqScEuatwuVs3poKMTupZ9vteCoaXCX46ekGcEJQ2M",
      "Ae2tdPwUPEZ7AkPis4Yg91yPdnyR92BqcdPERdwFsH5MrpuwEE9EwEy9rYU",
      "Ae2tdPwUPEZHjDJMCvV24Kfw9tBy15fTT4PuLR7iJ1XsZRNbzcjkA5DDeSR",
      "Ae2tdPwUPEYxmmuBc6qFzL5H7CQDvdLWXhmSnFQXfNXb76HJhCknq9Bax8p",
      "Ae2tdPwUPEZ3x8uH7gFoi71nT7jpuH1oy28SwQ1zxDQN1NtaKTjiA6o2nma",
      "Ae2tdPwUPEZLsbhHHMXjWGqNxMqtkBzoZaoNrRgnVvxoRnpb1L71b2qhSaS",
      "Ae2tdPwUPEZB2zsCjknYFVFgGuGiozg6NaQ8v2N3JBE4LCqDNZmYQXDChDe",
      "Ae2tdPwUPEZ8D4WJXrZxSrCV9kkMBik2VtgfGfGksd5SHoPzg5Upacpf67A",
      "Ae2tdPwUPEZMaWeT8ayieyLRDCSJ6uq66SYgD6XEyE6sUZSmCgqzUoVHewh",
      "Ae2tdPwUPEZ6Rv31RVSbtbUCwWacevfv29bqgxPp5XPSwpn6FiAD9dzLRSC",
      "Ae2tdPwUPEZN51USMf2p3bGtShBcUPU8SqbGUi17tchiFFrwT3b1B9YA5TQ",
      "Ae2tdPwUPEZCFJ9Pr32aTsvyqaF2C3ApDdhzYZu9dwW3A2W8xTkL3HwAX6n",
      "Ae2tdPwUPEYyNsQQCTeNHBxZchC9Cxp63Rbz7t9FFh9n7Zvtnpp1hVx2yEr",
      "Ae2tdPwUPEYxanbqkQdRvGfS9bbWvBZHv1RuUouMoxbTgptiugLTkcoDiwH",
      "Ae2tdPwUPEZ9XYMKAYRVpvTjN3wAcJwKxAQYRYRcNx6dD8yo5529L6iVKk7",
      "Ae2tdPwUPEZ2WBRatXLyH1uVkEoQvTtTovzsec3MEvbmxFs4fA4MUDUJYLd",
      "Ae2tdPwUPEZJE7VK943vgqqxMNmzP98hce884t4FMf9VA3yBqjpXYmux6z4",
      "Ae2tdPwUPEYwVDnFAcFh4rzbRje3wUuGPEzUEpGSJTYbCrhd9jwfHn6i7Bm",
      "Ae2tdPwUPEZKAQdsWLTno8sLN6r66QoWW3sH7AMnVo1YpD2bjDL3wqtQgeH",
    ],
    "blockSize": 50,
    "gapLimit": 20,
  },
  "hwDeviceInfo": Object {
    "bip44AccountPublic": "1ba2332dca14d6f1f5a5282512e725852a34d3aee1cc26057e9cfb2c2730f1665934fa0b0fa42e16ded504fa81198e45dc22d10dab69398e730542a198dcbfcf",
    "hwFeatures": Object {
      "deviceId": "DE:F1:F3:14:AE:93",
      "deviceObj": null,
      "model": "Nano",
      "serialHex": "3af9018bbe99bb",
      "vendor": "ledger.com",
    },
  },
  "internalChain": Object {
    "addressGenerator": Object {
      "accountPubKeyHex": "1ba2332dca14d6f1f5a5282512e725852a34d3aee1cc26057e9cfb2c2730f1665934fa0b0fa42e16ded504fa81198e45dc22d10dab69398e730542a198dcbfcf",
      "type": "Internal",
      "walletImplementationId": "haskell-byron",
    },
    "addresses": Array [
      "Ae2tdPwUPEZ5MPt1BeMo4fpuo9Kef4VZ4XmjXu9D8NLx3bno2XZiTCnGf4a",
      "Ae2tdPwUPEZ54f1By5Z4CDaiW41cEjSdtQamA8aBwjgkWsG1uEEHFr3H34X",
      "Ae2tdPwUPEZM9c8NX1jwrMbKTG8NgdnFTvojABhZcKg4DWkQsN5zTcpFe9G",
      "Ae2tdPwUPEYyEQK3XbV5EqmbGN2wxjxeqDGw2n4mUeBfdNYChMeYn5eenYy",
      "Ae2tdPwUPEZ6GPgDsSNkuLL1N71tTMAsytC7MaRnoTqZpjUKzpcZzPPBHbv",
      "Ae2tdPwUPEZ8PyZWpXY85G4hrkxD8zHMhav7KYHQn7sEToZQ6fUgWANB5Ce",
      "Ae2tdPwUPEZJSnp1Q4wamvz2mm8ULV8DxF8yBT3oRWud1p6R4t7tqABLWJ8",
      "Ae2tdPwUPEZBBe8KwpWxvQ6qhYgbNG9TjFZAUiy6K2ut5E2NVmHoo296a3P",
      "Ae2tdPwUPEZC4NkGP5Gh9hzJ1eVykox5cA712JT2BDMqmJTnA1yvxxs2Rhd",
      "Ae2tdPwUPEZ9aAnrkGU6UWmPjq5tA4vuosiNk7kQM748AkpaggTeeNqZMC5",
      "Ae2tdPwUPEZ96iHQjJcw4hMHELRkwyQonhoDARahjsQjgjc4zTS2m6bg1K4",
      "Ae2tdPwUPEZ5DjN4q4CqgUvp9ZKdDCHmNRJJThHaQJWcZPtT9NH6WAdKSJw",
      "Ae2tdPwUPEYwJiCbdyEKVciiR9wWjwq1EtQTcYxCZhLXBDgAZ6Y8GkNUZZy",
      "Ae2tdPwUPEZ1CVNmqmdh155ALmLaYFYQHomAJtpeWvQTy9SSSVfgJKz1Ug4",
      "Ae2tdPwUPEZ51d6xRmwBYXWrGvV4QKteuHZGGPtRvbGwerzhWQpmUUSAArw",
      "Ae2tdPwUPEZHQ7UXozoF2FrgM3azFDcgQbLHJxP4fPtBZwwqXVU1k9tHwhb",
      "Ae2tdPwUPEZDthWAwwc5XeJw5ZchYboxZLDVK2HVssmSQvKJcnrehfR4iX6",
      "Ae2tdPwUPEZ7LrEPgpp46ZT7L3LvzEgTR3majx7iUbD18LQf7HkqzoTZCT2",
      "Ae2tdPwUPEZ2u5aze1KoWKYtzoWzyRGaNdgino9UyMGCvwzbMXr4Pyezjyr",
      "Ae2tdPwUPEZGtEX3PHyeG7N3UJabbE1JJcdqCwtEqp6wwsr3sMFwcVVHgzY",
      "Ae2tdPwUPEZC2Lyc2uptJTACkveFPiFfo9wGKEN77GmuPZrh7neiL6ckCPG",
      "Ae2tdPwUPEZKA7V4x28VdtteG77aQ3ZLStUZszDRfnMddvDrn2e6TtHJoP7",
      "Ae2tdPwUPEZ9guXjpErRSALwntEJNTvzAp9E1fw8RLUQqyBWyhN4E9vRNQG",
      "Ae2tdPwUPEZ72gRtr2XAKmFXCbcCCcVMm1x94VPgeqZ4du1H67fahX8H6GU",
      "Ae2tdPwUPEZKVdaDpsWtgVKK7DTfBtpPFkPDoQEJs1pwmvnHLw7ev8VFiso",
      "Ae2tdPwUPEZK96yYC95K1kpAaBp9r8y1p8sH9uZpjRBYthNQmHMmdMmrjpV",
      "Ae2tdPwUPEZ9fJE1cNTGZoo7QA4YpMacLHhb6ViKfSxfHoBESuzaY4phRH4",
      "Ae2tdPwUPEYxjM5erUZ5mxJohdfsLqcGa8UaYf1sCofQgCKJHhQgEhiFczH",
      "Ae2tdPwUPEZArCQwqnJScgPBa6ykRDcMHvmygjqHEzzSVGHcchidE8Nmqju",
      "Ae2tdPwUPEZA6mxWnwvWCNErmB42WYdghmG8YopGYwS5WPmukXgHPg8DUca",
      "Ae2tdPwUPEZ8xxSsE6sSSd6Rip5Bqoh3GcKXfqBu2YdNkEQnpc7bPExKGZP",
      "Ae2tdPwUPEZKkJgWav5VLLhdokKvhgsq1AARVu67ye86pXqwqG7mLHBpc4k",
      "Ae2tdPwUPEZ69cxVix4wXyTLnav5M816FQ53PsCdTFbKLAMgK56vHczF7Ri",
      "Ae2tdPwUPEYzQ2Xtbe6SrvsoMMPYnJATXwTzw9FUSz8vtoPMhdty8seYWM5",
      "Ae2tdPwUPEZ3Un888im5RSqXZbiNMX2Nawfy8bKeDfPZXPqkwQEhEuNFcRR",
      "Ae2tdPwUPEZHFjNJG7o3QK6eWUciNTg82p3ktiYPiwizckTs6hJccDAN9om",
      "Ae2tdPwUPEZNKczsRDT87LsQGbp456bJzPW2cYABRu4wVbyeTTuZKqt6CMu",
      "Ae2tdPwUPEZHGPw91Be6peGMZ6UBUBMnKe8naFkF6BEuyvyWCjGqzWb6qsR",
      "Ae2tdPwUPEZK3fu5nknh2dn5VzkxX7MJZ6aGF8J44Z1CBg5E9VEhGEEQK8M",
      "Ae2tdPwUPEZMhjbNnnZGo7tJhF1FopdYi88TESXA3aqJ3F2pxyeyes5xT2M",
      "Ae2tdPwUPEZHhzsD5HyRdpLumW1fSS4o7X9g2XwQaVQhMTRbZdJXeCMURFE",
      "Ae2tdPwUPEZB4myrdA9rRXc6rhYHzsigPy8GB8Y16YuATc1ZNLvdsUaNCgc",
      "Ae2tdPwUPEYxirvGx85vcrugKFbfae8mjUWcVZiHVDhvy5nc8izpN1bF1jb",
      "Ae2tdPwUPEZ7htS9yLbLVPE5o3t8aMU6RuB6XNwf61reMfGuNNMAvUPAHA5",
      "Ae2tdPwUPEZ8K3y9j4FpPEcTo1qHn7fmkPE358GbosQxT8ctPAZ7isPzjug",
      "Ae2tdPwUPEZC4UHLQEXNtXa5hkX8439moGe3UeCKr6Fmhs6bzsVB2dRtQXX",
      "Ae2tdPwUPEZ8Kr1KkgZBfxGyaEqAqXgRGScUUbDpNRgMRutsDAMWx5nAp9e",
      "Ae2tdPwUPEYvwerPvabm3KD4QCmDGTd3V4VMtXmzLt8tDNfaiU6t2ypET8c",
      "Ae2tdPwUPEZLPLaDZTrqwdQjKELMLwCFHAuipyujrZWCiNHJ4KgoiVe6XK4",
      "Ae2tdPwUPEZ8qP89KVXPz8mR3v6KjbPb9gocep4bL1BWLUJnuEm2UHiSsNd",
    ],
    "blockSize": 50,
    "gapLimit": 20,
  },
  "isEasyConfirmationEnabled": false,
  "isHW": true,
  "isReadOnly": false,
  "lastGeneratedAddressIndex": 0,
  "publicKeyHex": "1ba2332dca14d6f1f5a5282512e725852a34d3aee1cc26057e9cfb2c2730f1665934fa0b0fa42e16ded504fa81198e45dc22d10dab69398e730542a198dcbfcf",
  "version": "1.5.1",
}
`;

exports[`ByronWallet restore 1`] = `
Array [
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
]
`;

exports[`ByronWallet restore 2`] = `
Array [
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
  "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
]
`;

exports[`ByronWallet restore 6`] = `
Object {
  "externalChain": Object {
    "addressGenerator": Object {
      "accountPubKeyHex": "6c2311e6e7a934751c55054cb21ab844f2e55baa48fc8f298dd54430f116d1c14c5f12d15611670454e05efac74e8f5d5e887ae2c15ef3086e0691d0d8439665",
      "type": "External",
      "walletImplementationId": "haskell-byron",
    },
    "addresses": Array [
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
    ],
    "blockSize": 50,
    "gapLimit": 20,
  },
  "hwDeviceInfo": null,
  "internalChain": Object {
    "addressGenerator": Object {
      "accountPubKeyHex": "6c2311e6e7a934751c55054cb21ab844f2e55baa48fc8f298dd54430f116d1c14c5f12d15611670454e05efac74e8f5d5e887ae2c15ef3086e0691d0d8439665",
      "type": "Internal",
      "walletImplementationId": "haskell-byron",
    },
    "addresses": Array [
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
      "Ae2tdPwUPEZ8DYsokmK3RD4gS6we8jJayWfi5sP3VzL9NVk7KPo57WC34Mp",
    ],
    "blockSize": 50,
    "gapLimit": 20,
  },
  "isEasyConfirmationEnabled": false,
  "isHW": false,
  "isReadOnly": false,
  "lastGeneratedAddressIndex": 13,
  "publicKeyHex": "6c2311e6e7a934751c55054cb21ab844f2e55baa48fc8f298dd54430f116d1c14c5f12d15611670454e05efac74e8f5d5e887ae2c15ef3086e0691d0d8439665",
  "version": "1.5.1",
}
`;
